--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-footer {
-background-image: url(../assets/bgimage.jpg));
+.footer{
+padding: 50px;
+background-image: url(..\assets\bgk-footer.png)
+
 
 }
