--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-.footer{
-padding: 50px;
-background-image: url(..\assets\bgk-footer.png)
+.footer {
+ background-image: url("./images/bgk-footer.png") center center;
+ background-size: cover;
+ height: 400px;
+
 
 
 }
