--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 footer {
     position: absolute;
-    background-image: url('./images/bgk-footer.png');
+    background-image: url('/images/bgk-footer.png');
+    background-position: center;
+    background-size: cover;
     bottom: 0;
     left: 0;
     right: 0;
-    height: auto;
+    height: 600px;
     width: 100vw;
     padding-top: 40px;
-    color: #fff;
     font-family: 'Quicksand', sans-serif;
 }
 
