--- a/style.css
+++ b/style.css
@@ -8,12 +8,29 @@ padding-bottom: 10px;
 }
 
 .division {
-max-width: 960px;
-margin: 0 auto;
+ display: flex;
+    max-width: 960px;
+    gap: 24px;
+    margin: 0 auto;
+
 
 }
+.child{
+    gap: 40px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.child img{
+width: 160px;
 
+}
+.wrapper{
+    display: flex;
+    gap: 80px;
+}
 
 form {
     display: flex;
@@ -26,24 +43,26 @@ form {
 
 }
 
+form  :last-child {
+    max-width: 100px;
+    background-color: white;
+
+}
 
 
 
 /* <!-- Footer styling started here--> */
 
 footer {
-    position: absolute;
+    
     background-image: url('images/bgk-footer.png');
     background-position: center;
     color: white;
     background-size: cover;
-    bottom: 0;
-    left: 0;
-    right: 0;
     height: auto;
     width: 100vw;
     padding-top: 40px;
-    font-family: 'Quicksand', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .center {
@@ -53,32 +72,32 @@ footer {
     margin-left: auto;
 
 }
-.column {
+.col1 {
     display: flex;
     justify-content: space-between;
     width: -webkit-fill-available;
     align-items: center;
 }
 
-.about {
+.content {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
 }
 
-.links,
+.linky,
 .subscribe {
     display: flex;
     flex-direction: column;
 }
 
-.about {
+.content {
     display: flex;
     flex-direction: column;
 }
 
 h1 {
-    font-family: Quicksand;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-style: normal;
     font-variant: normal;
@@ -86,7 +105,7 @@ h1 {
     line-height: 26.4px;
 }
 
-.about ul li {
+.content ul li {
     float: left;
     text-align: center;
     padding: 10px 16px;
@@ -106,12 +125,12 @@ ul {
     padding: 0 5px;
 }
 
-#footer-address ul {
+#foot-address ul {
     display: flex;
     flex-direction: column;
 }
 
-.social-wrapper ul li {
+.social ul li {
     margin: 0 5px 0 1px;
 }
 
@@ -134,7 +153,7 @@ input {
     border-image: initial;
 }
 
-.footer-nav ul li a {
+.foot-nav ul li a {
     float: left;
     color: #f2f2f2;
     text-align: center;
@@ -143,12 +162,12 @@ input {
     font-size: 17px;
 }
 
-.footer-nav {
+.foot-nav {
     display: flex;
     align-items: center;
 }
 
-.footer-nav ul {
+.foot-nav ul {
     list-style: none;
     flex: auto;
     justify-content: space-around;
