--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ form {
     display: flex;
     margin-top: 0em;
     flex-direction: column;
+    border-color: rgb(239, 227, 227);
     width: 300px;
     gap: 16px;
     
@@ -44,8 +45,10 @@ form {
 }
 
 form  :last-child {
+    border-color: aqua;
     max-width: 100px;
     background-color: white;
+
 
 }
 
